--- a/face-recognition-page/src/index.css
+++ b/face-recognition-page/src/index.css
@@ -5,12 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(217deg, rgba(255, 0, 212, 0.945), rgba(255,0,0,0) 70.71%),
-            linear-gradient(127deg, rgba(48, 224, 255, 0.993), rgba(0,255,0,0) 70.71%),
-            linear-gradient(336deg, rgb(21, 241, 32), rgba(0,0,255,0) 70.71%);
+  background: linear-gradient(90deg, rgba(0,251,255,1) 0%, rgba(206,0,255,1) 100%);
+            
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@font-face {
+  font-family: 'Gumball';
+  src: local('Gumball'), url(./fonts/Gumball.ttf) format('truetype');
+  font-weight: bold;
+}
+
+.Gumball{
+  font-family: 'Gumball';
 }
